--- a/DEV5/src/index.css
+++ b/DEV5/src/index.css
@@ -1,19 +1,23 @@
-/* Kleine reset + basis */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 html,
 body,
 #root {
   height: 100%;
 }
+
 body {
-  font-family: system-ui, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: #0f0f12;
   color: #e8e8e8;
 }
+
 a {
   color: inherit;
   text-decoration: none;
